chore(project): :wrench: atualiza o caminho do repositorio.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,27 +1,27 @@
 [submodule "Beginner/1001/make"]
 	path = Beginner/1001/make
-	url = git@github.com-personal:FranciscoGuilherme/URIJudge-submodules.git
+	url = git@github.com:FranciscoGuilherme/URIJudge-submodules.git
 [submodule "Beginner/1002/make"]
 	path = Beginner/1002/make
-	url = git@github.com-personal:FranciscoGuilherme/URIJudge-submodules.git
+	url = git@github.com:FranciscoGuilherme/URIJudge-submodules.git
 [submodule "Beginner/1003/make"]
 	path = Beginner/1003/make
-	url = git@github.com-personal:FranciscoGuilherme/URIJudge-submodules.git
+	url = git@github.com:FranciscoGuilherme/URIJudge-submodules.git
 [submodule "Beginner/1004/make"]
 	path = Beginner/1004/make
-	url = git@github.com-personal:FranciscoGuilherme/URIJudge-submodules.git
+	url = git@github.com:FranciscoGuilherme/URIJudge-submodules.git
 [submodule "Beginner/1005/make"]
 	path = Beginner/1005/make
-	url = git@github.com-personal:FranciscoGuilherme/URIJudge-submodules.git
+	url = git@github.com:FranciscoGuilherme/URIJudge-submodules.git
 [submodule "Beginner/1006/make"]
 	path = Beginner/1006/make
-	url = git@github.com-personal:FranciscoGuilherme/URIJudge-submodules.git
+	url = git@github.com:FranciscoGuilherme/URIJudge-submodules.git
 [submodule "Beginner/1007/make"]
 	path = Beginner/1007/make
-	url = git@github.com-personal:FranciscoGuilherme/URIJudge-submodules.git
+	url = git@github.com:FranciscoGuilherme/URIJudge-submodules.git
 [submodule "Beginner/1008/make"]
 	path = Beginner/1008/make
-	url = git@github.com-personal:FranciscoGuilherme/URIJudge-submodules.git
+	url = git@github.com:FranciscoGuilherme/URIJudge-submodules.git
 [submodule "Beginner/1009/make"]
 	path = Beginner/1009/make
-	url = git@github.com-personal:FranciscoGuilherme/URIJudge-submodules.git
+	url = git@github.com:FranciscoGuilherme/URIJudge-submodules.git
